[tool.poetry]
name = "japi"
version = "0.0.0"
description = "The jDanBot API"
authors = ["Daniel Zakharov <gzdan734@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
piccolo = {extras = ["sqlite"], version = "^1.5.0"}
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[tool.ruff]
line-length = 70
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
